--- a/Core/Properties/Framework.WebApi.nuspec
+++ b/Core/Properties/Framework.WebApi.nuspec
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0"?>
 <package >
-  <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
-  </metadata>
+	<metadata>
+		<id>$id$</id>
+		<version>$version$</version>
+		<title>$title$</title>
+		<authors>$author$</authors>
+		<owners>$author$</owners>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<description>$description$</description>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<projectUrl>https://github.com/ArchonInfoSys/framework-webapi</projectUrl>
+		<licenseUrl>https://github.com/ArchonInfoSys/framework-webapi/blob/master/LICENSE</licenseUrl>
+	</metadata>
 </package>
