--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -65,7 +65,7 @@
     <Compile Include="EnsureTrailingSlashAttribute.cs" />
     <Compile Include="HttpPatchClientSupport.cs" />
     <Compile Include="Link.cs" />
-    <Compile Include="LinkExtensions.cs" />
+    <Compile Include="HttpClientExtensions.cs" />
     <Compile Include="Log4netExceptionLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
