--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="AuthHeaderManipulator.cs" />
-    <Compile Include="RequestAuthentication.cs" />
+    <Compile Include="Authorization.cs" />
     <Compile Include="RequestExtensions.cs" />
     <Compile Include="ResponseExtensions.cs" />
     <Compile Include="UriExtensions.cs" />
