--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="HttpPatchClientSupport.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="HttpClientExtensions.cs" />
+    <Compile Include="LinkExtensions.cs" />
     <Compile Include="Log4netExceptionLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
