--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -62,8 +62,9 @@
     <Compile Include="EnsureTrailingSlashAttribute.cs" />
     <Compile Include="FakeHttpHandler.cs" />
     <Compile Include="HttpPatchClientSupport.cs" />
-    <Compile Include="Link.cs" />
+    <Compile Include="AuthorizedLink.cs" />
     <Compile Include="HttpClientExtensions.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="LinkExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
