--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net451" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
   <package id="xunit" version="1.9.2" targetFramework="net451" />
 </packages>
