--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -60,6 +60,9 @@
     </Compile>
     <Compile Include="AuthHeaderManipulatorTests.cs" />
     <Compile Include="AuthorizationTests.cs" />
+    <Compile Include="Links\LinkWithResponse.cs" />
+    <Compile Include="Links\PlainLink.cs" />
+    <Compile Include="LinkTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="ContextUtil.cs" />
