--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="..\AssemblyInfoCommon.cs">
       <Link>Properties\AssemblyInfoCommon.cs</Link>
     </Compile>
+    <Compile Include="AuthorizeCorrectlyAttribute.cs" />
     <Compile Include="AuthToken.cs" />
     <Compile Include="DomainExceptionFilterAttribute.cs" />
     <Compile Include="EnsureNoTrailingSlashAttribute.cs" />
