--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Moq" version="4.2.1409.1722" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
   <package id="xunit" version="1.9.2" targetFramework="net451" />
+  <package id="xunit.runner.visualstudio" version="2.0.0-rc3-build1046" targetFramework="net451" />
 </packages>
