--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -82,6 +82,7 @@
     <None Include="..\common.nuspec">
       <Link>Properties\common.nuspec</Link>
     </None>
+    <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
