--- a/Logging/Logging.csproj
+++ b/Logging/Logging.csproj
@@ -63,6 +63,7 @@
     <None Include="..\common.nuspec">
       <Link>Properties\common.nuspec</Link>
     </None>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
