--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -64,11 +64,14 @@
     <Compile Include="EnsureNoTrailingSlashAttribute.cs" />
     <Compile Include="EnsureTrailingSlashAttribute.cs" />
     <Compile Include="FakeHttpHandler.cs" />
+    <Compile Include="MethodRouteAttributes.cs" />
     <Compile Include="HttpPatchClientSupport.cs" />
     <Compile Include="AuthorizedLink.cs" />
     <Compile Include="HttpClientExtensions.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="LinkExtensions.cs" />
+    <Compile Include="MethodConstraint.cs" />
+    <Compile Include="MethodConstraintedRouteAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersion.cs" />
     <Compile Include="AuthHeaderManipulator.cs" />
