--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net451" />
+  <package id="MSBuildTasks" version="1.4.0.65" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="xunit" version="1.9.2" targetFramework="net451" />
   <package id="xunit.runner.visualstudio" version="2.0.0-rc3-build1046" targetFramework="net451" />
