Update to work with latest nuget client

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -81,13 +81,11 @@
     <Compile Include="ValidateModelAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\common.nuspec">
-      <Link>Properties\common.nuspec</Link>
-    </None>
     <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\Core.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
