Rearranging the deck chairs
Moving files to src & test folders.

--- a/test/tests.csproj
+++ b/test/tests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Archon.Http\Archon.Http.csproj" />
+    <ProjectReference Include="..\src\http.csproj" />
   </ItemGroup>
 
   <ItemGroup>
