--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -5,6 +5,11 @@
   <package id="Moq" version="4.2.1409.1722" targetFramework="net451" />
   <package id="MSBuildTasks" version="1.4.0.65" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="xunit" version="1.9.2" targetFramework="net451" />
   <package id="xunit.runner.visualstudio" version="2.0.0-rc3-build1046" targetFramework="net451" />
 </packages>
