--- a/aspnetcore/aspnetcore.csproj
+++ b/aspnetcore/aspnetcore.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>Middleware and helpers to make working with ASP.NET MVC easier.</Description>
     <Authors>Archon Information Systems, LLC</Authors>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard1.3</TargetFrameworks>
     <AssemblyName>Archon.AspNetCore</AssemblyName>
     <RootNamespace>Archon.AspNetCore</RootNamespace>
     <PackageTags>utils;api;http;model binders;middleware</PackageTags>
