--- a/aspnetcore/aspnetcore.csproj
+++ b/aspnetcore/aspnetcore.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Description>Middleware and helpers to make working with ASP.NET MVC easier.</Description>
     <Authors>Archon Information Systems, LLC</Authors>
-    <TargetFrameworks>netstandard2.0;netstandard1.3</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>Archon.AspNetCore</AssemblyName>
     <RootNamespace>Archon.AspNetCore</RootNamespace>
     <PackageTags>utils;api;http;model binders;middleware</PackageTags>
@@ -19,11 +19,11 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <TreatSpecificWarningsAsErrors />
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="1.1.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-  </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.2" />
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="1.1.3" />
+  </ItemGroup>
 </Project>
