--- a/aspnetcore/aspnetcore.csproj
+++ b/aspnetcore/aspnetcore.csproj
@@ -17,7 +17,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <TreatSpecificWarningsAsErrors />
-    <NoWarn>NU5105</NoWarn>
+	<NoWarn>NU5105;NU5125</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
